# sbox-cheat-loader

./: Makefile  readme.md
NETPayload/: NETPayload.csproj  Program.cs
NativeNETLoader/: Cargo.toml
NativeNETLoader/src/: lib.rs
SBOXMod/: Program.cs  ResourceFile.Designer.cs  ResourceFile.resx  SBOXMod.csproj
SBOXMod/Commands/: global.cs
