[package]
name = "native_net_loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.62.1"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",

]

[dependencies.windows-sys]
version = ">=0.59, <=0.61"
features = ["Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"]


[dependencies]
log = "0.4.28"
reqwest = { version = "0.11", features = ["blocking"] }
netcorehost = "0.18.0"

